--- a/packages/czbank-rusher-workbench/src/customs.scss
+++ b/packages/czbank-rusher-workbench/src/customs.scss
@@ -36,3 +36,10 @@ table.table.b-table td {
 .custom-switch .custom-control-label {
 	vertical-align: middle;
 }
+
+#czbank-rusher-workbench {
+	.nav-link .b-icon.bi {
+		font-size: 100%;
+		vertical-align: middle;
+	}
+}
