[ADDED] Activity GUI

--- a/packages/czbank-rusher-workbench/src/customs.scss
+++ b/packages/czbank-rusher-workbench/src/customs.scss
@@ -59,6 +59,10 @@ table.table.b-table td {
 	width: 8em;
 }
 
+.col-string {
+	width: 16em;
+}
+
 // #czbank-rusher-workbench {
 // 	.nav-link .b-icon.bi {
 // 		font-size: 100%;
